added registration form some repair still needed

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -26,5 +26,6 @@
             {{form.submit()}}
         </p>
     </form>
+    <p>New User? <a href="{{url_for('register')}}">Click to register</a></p>
 
 {% endblock %}
