--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -10,7 +10,32 @@
          {% for error in form.username.errors %}
          <span style="color: red;">[{{error}}]</span>
          {% endfor %}
-        
-        
-
     </p>
+
+    <p>
+        {{form.email.label}}<br>
+        {{form.email(size=64)}}
+        {% for error in form.email.errors %}
+        <span style="color: red;">[{{error}}]</span>
+        {% endfor %}
+    </p>
+
+    <p>
+        {{form.password.label}}
+        {{form.password(size=32)}}
+        {% for error in form.password.errors%}
+        <span style="color: red;">[{{error}}]</span>
+        {% endfor %}
+    </p>
+
+    <p>
+        {{form.repeat_password.label}}
+        {{form.repeat_password(size=32)}}
+        {% for error in form.repeat_password.errors%}
+        <span style="color: red;">[{{error}}]</span>
+        {% endfor %}
+    </p>
+
+    <p> {{form.submit()}} </p>
+</form>
+{% endblock %}
