--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -12,9 +12,9 @@
                 {% if user == current_user %}
                 <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
                 {% elif not current_user.is_following(user) %}
-                <p><a href="{{url_for('follow', username=username)}}">Follow</a></p>
+                <p><a href="{{url_for('follow', username=user.username)}}">Follow</a></p>
                 {%else %}
-                <p><a href="{{url_for('unfollow', username=username)}}">UnFollow</a></p>
+                <p><a href="{{url_for('unfollow', username=user.username)}}">UnFollow</a></p>
                 {% endif %}
             </td>
         </tr>
