Listing 9.9 improved _post.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% block content %}
 <h1>Hi, {{current_user.username}}!</h1>
 {% if form %}
 <form action="" method="post">
@@ -12,10 +13,8 @@
     </p>
     <p>{{form.submit}}</p>
 </form>
-{% endif %} {% for post in posts %}
-<p>
-    {{post.author.username}} says:
-    <b>{{post.body}}</b>
-</p>
-
-{% endfor %} {% endblock %}
+    {% endif %}
+    {% for post in posts %} 
+        {% include '_post.html' %}
+    {% endfor %} 
+{% endblock %}
