corrected some errors

--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -4,11 +4,7 @@
             <img src="{{post.author.avatar(36)}}">
         </td>
         <td>
-            <a href="{{url_for('user', username=post.author.username)}}">
-                {{post.author.username}}
-            </a>
-            says:
-            <br>{{post.body}}
+            <a href="{{url_for('user', username=post.author.username)}}">{{post.author.username}}</a>says:<br>{{post.body}}
         </td>
     </tr>
 </table>
